--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "style-loader": "^0.23.1",
     "supervisor": "^0.12.0",
     "transfer-webpack-plugin": "^0.1.4",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   }
 }
